--- a/assets/style.css
+++ b/assets/style.css
@@ -92,6 +92,7 @@ nav li{
     align-items: center;
     justify-content: center; 
     flex-direction: column;  
+    
 
 }
 .portfolio-containers-large img{
@@ -132,7 +133,6 @@ nav li{
 .portfolio-containers div { 
     height: auto; 
     width: auto;
-    padding: 75px;  
 }
 
 /* contact me */
@@ -158,10 +158,9 @@ nav li{
 
 
 .contact-me input, .contact-me textarea {
-    border: 1px solid var(--secondary-color);
+    border: 1px solid;
     display: block;
     padding: 7px 15px;
-    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
@@ -176,7 +175,6 @@ nav li{
   
   .contact-me button {
     width: 50%;
-
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
@@ -210,6 +208,26 @@ nav li{
   
   /* MEDIA QUERY FOR TABLETS AND SMALLER */
   @media screen and (max-width: 768px) {
+    .hero {
+        display: flex;
+        justify-content: center;
+        background-image: url(./images/16-9\ Hero\ IMG_0001.jpg);
+        background-size: cover;
+        height: 200px;
+        width: auto;
+        border-bottom: 3px solid black;
+    
+    }
+
+    .portfolio-containers-large .portfolio-containers {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+        padding: none;
+    }
+    
+
       .about-me {
         margin: 0 50px;
       }
@@ -225,4 +243,61 @@ nav li{
   }
   /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
 @media screen and (max-width: 575px) {
+
+ 
+
+    html{
+        font-size: 15px;
+    }
+
+    nav li{
+        padding: none;
+    }
+    
+    .hero {
+        display: flex;
+        justify-content: center;
+        background-image: url(./images/16-9\ Hero\ IMG_0001.jpg);
+        background-size: cover;
+        height: 150px;
+        width: auto;
+        border-bottom: 3px solid black;
+    
+    }
+
+    .portfolio-containers-large .portfolio-containers {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+        padding: none;
+    }
+
+    .portfolio-containers div{
+        padding: none;
+    }
+    
+    .portfolio-containers-large img {
+        max-width: 320px;
+    }
+
+    .contact-me input, .contact-me textarea {
+        border: 1px solid;
+        display: block;
+        padding: 4px 12px;
+        width: 80%;
+        margin-bottom: 12px;
+        margin-top: 3px;
+        border-radius: 10px;
+        background-color: rgba(255,255,255, 0.75);
+  }
+
+    .contact-me button {
+        width: 50%;
+        text-align: center;
+        padding: 15px 0;
+        font-size: 10px;
+        border-radius: 10px;
+
+}
 }
